--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,15 @@
     <string name="added_clipboard">Added to clipboard</string>
     <string name="added_tag_clipboard">Added to clipboard with tags</string>
     <string name="download_failed">Download failed</string>
-
+    <string name="sites">Sites</string>
     <string name="add_server">Please add a server in preferences</string>
+    <string name="select_default">Please select a default server in preferences</string>
     <string name="last_upload_failed">Last update failed. Reason: %s</string>
     <string name="settings">Settings</string>
+    <string name="saved_sites">Saved sites</string>
+    <string name="add_site_summ">Site to upload to</string>
+    <string name="add_site">Add site</string>
+    <string name="chose_site">Chose default site</string>
     <string name="pref_server">Remote connection</string>
     <string name="pref_valid_cert">Signed Certs</string>
     <string name="pref_cert_summ">Only allow signed certs, no self signed.</string>
@@ -27,15 +32,36 @@
     <string name="pref_url_summ">Url of the server</string>
     <string name="default_port">22</string>
 
+    <string name="content_description_warning">Warning</string>
+    <string name="content_description_thumbnail">Thumbnail of upload</string>
+
     <!-- User auth -->
     <string name="pref_auth">Authentication</string>
     <string name="pref_user">Username</string>
     <string name="pref_passwd">Password</string>
 
-    <!--Misc -->
+    <!-- Add site -->
+    <string name="add_host">Host</string>
+    <string name="add_url">Website url</string>
+    <string name="add_port">Port</string>
+    <string name="add_remote_path">Remote path</string>
+    <string name="add_username">Username</string>
+    <string name="add_password">Password</string>
+    <string name="add_self_signed">Signed certificates</string>
+    <string name="add_cancel">Cancel</string>
+    <string name="add_save">Save</string>
+
+    <!-- Keys -->
+    <string name="pref_ssh_key">SSH Keys</string>
+    <string name="pref_ssh_key_summ">ssh keys</string>
+    <string name="pref_ssh_import">Import</string>
+    <string name="pref_ssh_import_summ">Import keys from storage</string>
+    <string name="pref_ssh_generate">Generate</string>
+    <string name="pref_ssh_generate_summ">Generate ssh keys</string>
+
+    <!-- Misc -->
     <string name="pref_tag_summ">Add tags to clipboard</string>
     <string name="pref_tag">Add tag</string>
-
     <string name="pref_tag_txt_summ">Has to include %url</string>
     <string name="pref_tag_txt">Write tags</string>
     <string name="pref_default_list">Default list action</string>
@@ -43,21 +69,23 @@
     <string name="clear_hist">Clear history</string>
     <string name="clear_hist_summ">Clear home history list and thumbnail cache</string>
 
-    <!--Alert dialogs -->
-    <string name="alert_dialog_ok">Ok</string>
+    <!-- Alert dialogs -->
+    <string name="alert_dialog_ok">OK</string>
     <string name="alert_dialog_cancel">Cancel</string>
-    <string name="ip4_and_http_title">Incorret host</string>
+    <string name="ip4_and_http_title">Incorrect host</string>
     <string name="ip4_and_http">If you write the host as an IP please do not include any http or https. Please retype the setting without http/https. </string>
     <string name="nothing_saved">Preferences not saved, please redo them</string>
     <string name="number_port_title">Invalid port</string>
     <string name="number_port">Port number has to be a number and no other characters.</string>
     <string name="make_sure_username_is_correct">Username seems to contain starting or ending space. Is this correct?</string>
     <string name="make_sure_path_is_correct">Path ends or starts with whitespace, not saved. </string>
-
-    <!--Menu Stuff -->
+    <string name="make_sure_url_is_correct">URL can\'t be null. </string>
+    <string name="make_sure_password_is_correct">Password can\'t be null.</string>
+    <!-- Menu Stuff -->
     <string name="open_browser">Open in browser</string>
     <string name="copy">Copy</string>
     <string name="copy_tags">Copy with tags</string>
+
     <string-array name="clickAlias">
         <item>@string/open_browser</item>
         <item>@string/copy</item>
@@ -68,4 +96,8 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <string name="title_activity_add_site">AddSiteActivity</string>
+    <string name="action_settings">Settings</string>
+
 </resources>
